--- a/src/main/resources/com/example/gcalc/PhysicsCalc.fxml
+++ b/src/main/resources/com/example/gcalc/PhysicsCalc.fxml
@@ -16,16 +16,16 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
-            <Button GridPane.columnIndex="0" GridPane.rowIndex="1" fx:id="gCalcBtn" onAction="#changeCalc" prefWidth="40" prefHeight="20">Gra</Button>
-            <Button GridPane.columnIndex="0" GridPane.rowIndex="2" fx:id="BCalcBtn" onAction="#changeCalcB" prefWidth="40" prefHeight="20">Bas</Button>
-            <Button GridPane.columnIndex="0" GridPane.rowIndex="3" fx:id="SCalcBtn" onAction="#changeCalcS" prefWidth="40" prefHeight="20">Sci </Button>
-            <TextField GridPane.columnSpan="2" GridPane.columnIndex="0" GridPane.rowIndex="0" prefWidth="Infinity" prefHeight="40" fx:id="EquationField" onAction="#onEnter"/>
+            <Button fx:id="gCalcBtn" onAction="#changeCalc" prefHeight="20" prefWidth="40" GridPane.columnIndex="0" GridPane.rowIndex="1">Gra</Button>
+            <Button fx:id="BCalcBtn" onAction="#changeCalcB" prefHeight="20" prefWidth="40" GridPane.columnIndex="0" GridPane.rowIndex="2">Bas</Button>
+            <Button fx:id="SCalcBtn" onAction="#changeCalcS" prefHeight="20" prefWidth="40" GridPane.columnIndex="0" GridPane.rowIndex="3">Sci </Button>
+            <TextField fx:id="EquationField" onAction="#onEnter" prefHeight="40" prefWidth="Infinity" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="0" />
         </GridPane>
     </bottom>
     <center>
         <ScrollPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="630.0" prefWidth="599.0">
-                <VBox layoutY="194.0" prefHeight="630" prefWidth="600" fx:id="textScreen"/>
+                <VBox fx:id="textScreen" layoutY="260.0" prefHeight="564.0" prefWidth="600" />
             </AnchorPane>
         </ScrollPane>
     </center>
