--- a/src/main/resources/com/example/gcalc/PhysicsCalc.fxml
+++ b/src/main/resources/com/example/gcalc/PhysicsCalc.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.layout.*?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gcalc.GCController">
@@ -22,12 +24,12 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
-            <Button fx:id="gCalcBtn" onAction="#changeCalc" prefHeight="20" prefWidth="80" GridPane.columnIndex="7" text="Graphing" GridPane.rowIndex="1"/>
-            <Button fx:id="BCalcBtn" onAction="#changeCalcB" prefHeight="20" prefWidth="80" GridPane.columnIndex="7" text="Basic" GridPane.rowIndex="2"/>
-            <Button fx:id="SCalcBtn" onAction="#changeCalcS" prefHeight="20" prefWidth="80" GridPane.columnIndex="7" text="Scientific" GridPane.rowIndex="3"/>
+            <Button fx:id="gCalcBtn" onAction="#changeCalc" prefHeight="20" prefWidth="Infinity" text="Graphing" GridPane.columnIndex="7" GridPane.rowIndex="1" />
+            <Button fx:id="BCalcBtn" onAction="#changeCalcB" prefHeight="20" prefWidth="Infinity" text="Basic" GridPane.columnIndex="7" GridPane.rowIndex="2" />
+            <Button fx:id="SCalcBtn" onAction="#changeCalcS" prefHeight="20" prefWidth="Infinity" text="Scientific" GridPane.columnIndex="7" GridPane.rowIndex="3" />
 
             <TextField fx:id="EquationField" onAction="#onEnter" prefHeight="40" prefWidth="Infinity" GridPane.columnIndex="0" GridPane.columnSpan="7" GridPane.rowIndex="0" />
-            <Button fx:id="Equals" onAction="#onEnter" prefHeight="40" prefWidth="Infinity" text="=" GridPane.columnIndex="7" GridPane.rowIndex="0"/>
+            <Button fx:id="Equals" onAction="#onEnter" prefHeight="40" prefWidth="Infinity" text="=" GridPane.columnIndex="7" GridPane.rowIndex="0" />
 
             <Button fx:id="piBtn" onAction="#addPi" prefHeight="20" prefWidth="Infinity" text="π" GridPane.columnIndex="0" GridPane.rowIndex="1" />
             <Button fx:id="eBtn" onAction="#addE" prefHeight="20" prefWidth="Infinity" text="E" GridPane.columnIndex="0" GridPane.rowIndex="2" />
@@ -60,10 +62,34 @@
         </GridPane>
     </bottom>
     <center>
-        <ScrollPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="630.0" prefWidth="599.0">
-                <VBox fx:id="textScreen" layoutY="260.0" prefHeight="564.0" prefWidth="600" />
+        <ScrollPane fx:id="scrollViewMain" prefHeight="181" prefWidth="733.0" BorderPane.alignment="CENTER">
+            <AnchorPane fx:id="apScroolView" minHeight="0.0" minWidth="0.0" prefHeight="181" prefWidth="733.0">
+                <VBox fx:id="textScreen" layoutX="6.0" prefHeight="181" prefWidth="715.0" AnchorPane.leftAnchor="6.0" AnchorPane.rightAnchor="12.0">
+               <cursor>
+                  <Cursor fx:constant="TEXT" />
+               </cursor>
+               <effect>
+                  <Glow level="1.0" />
+               </effect></VBox>
             </AnchorPane>
         </ScrollPane>
     </center>
+   <top>
+       <MenuBar BorderPane.alignment="CENTER">
+           <Menu mnemonicParsing="false" text="File">
+               <MenuItem mnemonicParsing="false" text="Close" fx:id="CloseMenuItem" onAction="#close"/>
+           </Menu>
+           <Menu mnemonicParsing="false" text="Edit">
+               <MenuItem mnemonicParsing="false" text="-"/>
+           </Menu>
+           <Menu mnemonicParsing="false" text="Help">
+               <MenuItem mnemonicParsing="false" text="About" onAction="#openAbout"/>
+               <MenuItem mnemonicParsing="false" text="Equation Help" onAction="#openEqHelp"/>
+               <MenuItem mnemonicParsing="false" text="Readme" onAction="#openReadme"/>
+           </Menu>
+           <Menu mnemonicParsing="false" text="Settings">
+               <MenuItem mnemonicParsing="false" text="Physics Settings"/>
+           </Menu>
+       </MenuBar>
+   </top>
 </BorderPane>
