--- a/src/main/resources/com/example/gcalc/css/Style.css
+++ b/src/main/resources/com/example/gcalc/css/Style.css
@@ -2,9 +2,7 @@ md-block { white-space: normal; font-family: monospace; }
 
 .main {
     width: auto;
-    padding-left: 5rem;
-    padding-right: 5rem;
-    padding-top: 5rem;
+    padding: 5rem;
     border-radius: 30px;
     border-width: 2px;
     border-color: darkslategray;
