--- a/src/main/resources/com/example/gcalc/PhysicsCalc.fxml
+++ b/src/main/resources/com/example/gcalc/PhysicsCalc.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
 <?import javafx.scene.layout.*?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gcalc.GCController">
@@ -67,28 +66,25 @@
                 <VBox fx:id="textScreen" layoutX="6.0" prefHeight="181" prefWidth="715.0" AnchorPane.leftAnchor="6.0" AnchorPane.rightAnchor="12.0">
                <cursor>
                   <Cursor fx:constant="TEXT" />
-               </cursor>
-               <effect>
-                  <Glow level="1.0" />
-               </effect></VBox>
+               </cursor></VBox>
             </AnchorPane>
         </ScrollPane>
     </center>
    <top>
        <MenuBar BorderPane.alignment="CENTER">
            <Menu mnemonicParsing="false" text="File">
-               <MenuItem mnemonicParsing="false" text="Close" fx:id="CloseMenuItem" onAction="#close"/>
+               <MenuItem fx:id="CloseMenuItem" mnemonicParsing="false" onAction="#close" text="Close" />
            </Menu>
            <Menu mnemonicParsing="false" text="Edit">
-               <MenuItem mnemonicParsing="false" text="-"/>
+               <MenuItem mnemonicParsing="false" text="-" />
            </Menu>
            <Menu mnemonicParsing="false" text="Help">
-               <MenuItem mnemonicParsing="false" text="Help" onAction="#openAbout"/>
-               <MenuItem mnemonicParsing="false" text="Equation Help" onAction="#openEqHelp"/>
-               <MenuItem mnemonicParsing="false" text="Readme" onAction="#openReadme"/>
+               <MenuItem mnemonicParsing="false" onAction="#openAbout" text="Help" />
+               <MenuItem mnemonicParsing="false" onAction="#openEqHelp" text="Equation Help" />
+               <MenuItem mnemonicParsing="false" onAction="#openReadme" text="Readme" />
            </Menu>
            <Menu mnemonicParsing="false" text="Settings">
-               <MenuItem mnemonicParsing="false" text="Physics Settings"/>
+               <MenuItem mnemonicParsing="false" text="Physics Settings" />
            </Menu>
        </MenuBar>
    </top>
