--- a/src/main/resources/com/example/gcalc/CalculusCalc.fxml
+++ b/src/main/resources/com/example/gcalc/CalculusCalc.fxml
@@ -1,7 +1,8 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
+<!--Sample button : -->
+<!--<Button fx:id="change" onAction="#change" prefHeight="20" prefWidth="Infinity" text="change" GridPane.columnIndex="0" GridPane.rowIndex="0" />-->
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="406" minWidth="770" prefHeight="406" prefWidth="770.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gcalc.GCController">
     <bottom>
         <GridPane BorderPane.alignment="CENTER">
@@ -27,13 +28,17 @@
             <Button fx:id="Equals" onAction="#onEnter" prefHeight="40" prefWidth="Infinity" text="=" GridPane.columnIndex="7" GridPane.rowIndex="0" />
             <Button fx:id="gCalcBtn" onAction="#changeCalc" prefHeight="20" prefWidth="Infinity" text="Graphing" GridPane.columnIndex="7" GridPane.rowIndex="1" />
             <Button fx:id="PCalcBtn" onAction="#changeCalcP" prefHeight="20" prefWidth="Infinity" text="Physics" GridPane.columnIndex="7" GridPane.rowIndex="2" />
-            <Button fx:id="BCalcBtn" onAction="#changeCalcB" prefHeight="20" prefWidth="Infinity" text="Calculus" GridPane.columnIndex="7" GridPane.rowIndex="3" />
+            <Button fx:id="SCalcBtn" onAction="#changeCalcS" prefHeight="20" prefWidth="Infinity" text="Scientific" GridPane.columnIndex="7" GridPane.rowIndex="3" />
             <Button fx:id="clearType" onAction="#clearType" prefHeight="20" prefWidth="Infinity" text="Clear Type" GridPane.columnIndex="7" GridPane.rowIndex="4" />
             <Button fx:id="clearBtm" onAction="#clear" prefHeight="20" prefWidth="Infinity" text="Clear" GridPane.columnIndex="7" GridPane.rowIndex="5" />
 
             <TextField fx:id="EquationField" onAction="#onEnter" prefHeight="40" prefWidth="Infinity" GridPane.columnIndex="0" GridPane.columnSpan="7" GridPane.rowIndex="0" />
 
-
+            <Button fx:id="cDeriveBtn" onAction="#chainDerive" prefHeight="20" prefWidth="Infinity" text="Chain derive" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+            <Button fx:id="DeriveBtn" onAction="#Derive" prefHeight="20" prefWidth="Infinity" text="Derive" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+            <Button fx:id="aFxBtn" onAction="#addFx" prefHeight="20" prefWidth="Infinity" text="f(x)=" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+            <Button fx:id="integralIZBtn" onAction="#addIntegralIZ" prefHeight="20" prefWidth="Infinity" text="∫∞0" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+            <Button fx:id="integralBtn" onAction="#addIntegral" prefHeight="20" prefWidth="Infinity" text="∫" GridPane.columnIndex="0" GridPane.rowIndex="5" />
         </GridPane>
     </bottom>
     <center>
