--- a/src/main/resources/com/example/gcalc/PhysicsCalc.fxml
+++ b/src/main/resources/com/example/gcalc/PhysicsCalc.fxml
@@ -37,8 +37,10 @@
             -->
             <Button fx:id="Equals" onAction="#onEnter" prefHeight="40" prefWidth="Infinity" text="=" GridPane.columnIndex="7" GridPane.rowIndex="0" />
             <Button fx:id="gCalcBtn" onAction="#changeCalc" prefHeight="20" prefWidth="Infinity" text="Graphing" GridPane.columnIndex="7" GridPane.rowIndex="1" />
-            <Button fx:id="BCalcBtn" onAction="#changeCalcB" prefHeight="20" prefWidth="Infinity" text="Basic" GridPane.columnIndex="7" GridPane.rowIndex="2" />
+            <Button fx:id="BCalcBtn" onAction="#changeCalcB" prefHeight="20" prefWidth="Infinity" text="Calculus" GridPane.columnIndex="7" GridPane.rowIndex="2" />
             <Button fx:id="SCalcBtn" onAction="#changeCalcS" prefHeight="20" prefWidth="Infinity" text="Scientific" GridPane.columnIndex="7" GridPane.rowIndex="3" />
+            <Button fx:id="clearType" onAction="#clearType" prefHeight="20" prefWidth="Infinity" text="Clear Type" GridPane.columnIndex="7" GridPane.rowIndex="4" />
+            <Button fx:id="clearBtm" onAction="#clear" prefHeight="20" prefWidth="Infinity" text="Clear" GridPane.columnIndex="7" GridPane.rowIndex="5" />
 
             <TextField fx:id="EquationField" onAction="#onEnter" prefHeight="40" prefWidth="Infinity" GridPane.columnIndex="0" GridPane.columnSpan="7" GridPane.rowIndex="0" />
 
@@ -56,11 +58,11 @@
 
             <Button fx:id="functionsBtn" onAction="#showFunctionsMenu" prefHeight="20" prefWidth="Infinity" text="FUNCTIONS" GridPane.columnIndex="2" GridPane.rowIndex="1" />
             <Button fx:id="convBtn" onAction="#conv" prefHeight="20" prefWidth="Infinity" text="CONVERT" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <Button fx:id="ConstantsBtn" onAction="#showConstantsMenu" prefHeight="20" prefWidth="Infinity" text="CONSTANTS" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <Button fx:id="ConstantsBtn" onAction="#showConstantMenu" prefHeight="20" prefWidth="Infinity" text="CONSTANTS" GridPane.columnIndex="2" GridPane.rowIndex="3" />
             <Button fx:id="MatrixBtn" onAction="#matrix" prefHeight="20" prefWidth="Infinity" text="MATRIX" GridPane.columnIndex="2" GridPane.rowIndex="4"/>
             <Button fx:id="ArrayBtn" onAction="#array" prefHeight="20" prefWidth="Infinity" text="ARRAY" GridPane.columnIndex="2" GridPane.rowIndex="5"/>
 
-            <Button fx:id="AbsoluteBtn" onAction="#absoltue" prefHeight="20" prefWidth="Infinity" text="|" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <Button fx:id="AbsoluteBtn" onAction="#absolute" prefHeight="20" prefWidth="Infinity" text="|" GridPane.columnIndex="3" GridPane.rowIndex="1" />
             <Button fx:id="FractionBtn" onAction="#fraction" prefHeight="20" prefWidth="Infinity" text="FRAC" GridPane.columnIndex="3" GridPane.rowIndex="2" />
             <Button fx:id="PercentBtn" onAction="#percent" prefHeight="20" prefWidth="Infinity" text="\%" GridPane.columnIndex="3" GridPane.rowIndex="3" />
             <Button fx:id="InequalityBtn" onAction="#Inequality" prefHeight="20" prefWidth="Infinity" text="Inequality" GridPane.columnIndex="3" GridPane.rowIndex="4" />
