--- a/src/main/resources/com/example/gcalc/css/Style.css
+++ b/src/main/resources/com/example/gcalc/css/Style.css
@@ -1,11 +1,11 @@
 md-block { white-space: normal; font-family: monospace;
-    padding: 5rem;
+    padding: 80px;
     border-radius: 30px;
     border-width: 2px;}
 
 .main {
     width: auto;
-    padding: 5rem;
+    padding: 80px;
     border-radius: 30px;
     border-width: 2px;
     border-color: darkslategray;
